# ArchMentor

./: .editorconfig  .env.example  .gitignore  .npmrc  .oxlintrc.json  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: hookify.block-env-file-access.local.md  hookify.block-env-file-reads.local.md
.github/workflows/: ci.yml
apps/agent/: README.md  conftest.py  pyproject.toml
apps/agent/archmentor_agent/: __init__.py  config.py  main.py  telemetry.py
apps/agent/archmentor_agent/api_client/: __init__.py  bootstrap.py
apps/agent/archmentor_agent/audio/: __init__.py  framework_adapters.py  noise_gate.py  stt.py
apps/agent/archmentor_agent/brain/: __init__.py  bootstrap.py  client.py  decision.py  haiku_client.py  haiku_prompt.py  pricing.py  prompt_builder.py  tools.py
apps/agent/archmentor_agent/brain/prompts/: few_shots.yaml  system.md
apps/agent/archmentor_agent/canvas/: __init__.py  client.py  parser.py
apps/agent/archmentor_agent/events/: __init__.py  coalescer.py  router.py  types.py
apps/agent/archmentor_agent/ledger/: __init__.py  client.py
apps/agent/archmentor_agent/queue/: __init__.py  speech_check.py  utterance_queue.py
apps/agent/archmentor_agent/snapshots/: __init__.py  client.py  serializer.py
apps/agent/archmentor_agent/state/: __init__.py  redis_store.py  session_state.py
apps/agent/archmentor_agent/tts/: __init__.py  kokoro.py
apps/agent/tests/: test_brain_client.py  test_brain_decision.py  test_brain_prompt_builder.py  test_canvas_handler.py  test_canvas_parser.py  test_canvas_parser_property.py  test_canvas_snapshot_client.py  test_event_coalescer.py  test_event_router.py  test_framework_adapters.py  test_haiku_client.py  test_hallucination_filter.py  test_ledger_client.py  test_main_entrypoint.py  test_noise_gate.py  test_phase_timer.py  test_redis_store.py  test_replay_script.py  test_session_state.py  test_settings.py  test_snapshot_client.py  test_snapshots.py  test_speech_check.py  test_stt_adapter.py  test_tts_adapter.py  test_utterance_queue.py
apps/agent/tests/_fixtures/canvas/adversarial/: cyclic_groups.json  unknown_element_type.json
apps/agent/tests/_helpers/: __init__.py  brain.py  canvas.py  snapshots.py  store.py  streaming.py
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/archmentor_api/: __init__.py  config.py  db.py  deps.py  main.py
apps/api/archmentor_api/middleware/: __init__.py  body_size.py
apps/api/archmentor_api/models/: __init__.py  _base.py  brain_snapshot.py  canvas_snapshot.py  interruption.py  problem.py  report.py  session.py  session_event.py  user.py
apps/api/archmentor_api/routes/: health.py  livekit_tokens.py  me.py  problems.py  reports.py  sessions.py
apps/api/archmentor_api/services/: __init__.py  canvas_snapshots.py  event_ledger.py  sessions.py  snapshots.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 7250b3970037_initial_m0_schema.py  a1b2c3d4e5f6_add_cascade_to_session_children.py  b2c3d4e5f6a7_drop_canvas_diff_column.py  c3d4e5f6a7b8_add_summary_compressed_event_type.py
apps/api/tests/: conftest.py  test_body_size_middleware.py  test_canvas_snapshots_route.py  test_event_ledger.py  test_health.py  test_livekit_tokens.py  test_problems_route.py  test_session_events_route.py  test_sessions_lifecycle.py  test_snapshots_route.py
apps/web/: .gitignore  README.md  components.json  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/login/: login-form.tsx  page.tsx
apps/web/app/problems/: page.tsx
apps/web/app/reports/[id]/: page.tsx
apps/web/app/session/[id]/: page.tsx
apps/web/app/session/dev-test/: page.tsx
apps/web/app/session/new/: page.tsx
apps/web/components/auth/: auth-provider.tsx  sign-out-button.tsx
apps/web/components/canvas/: canvas-scene-publisher.test.ts  canvas-scene-publisher.ts  excalidraw-canvas.tsx
apps/web/components/livekit/: session-room.tsx
apps/web/components/session/: session-shell.tsx  start-session-form.tsx
apps/web/components/ui/: button.tsx
apps/web/lib/api/: sessions.ts
apps/web/lib/livekit/: client.ts  token.ts
apps/web/lib/supabase/: client.ts  server.ts
docs/brainstorms/: 2026-04-25-m3-plan-refinements-requirements.md  2026-04-26-m4-plan-refinements-requirements.md
docs/ideation/: 2026-04-25-m3-plan-review-ideation.md  2026-04-26-m4-plan-review-ideation.md
docs/plans/: 2026-04-17-001-feat-ai-system-design-mentor-plan.md  2026-04-22-001-feat-m2-brain-mvp-plan.md  2026-04-25-001-feat-m3-canvas-and-session-lifecycle-plan.md  2026-04-26-001-feat-m4-streaming-summary-and-cost-controls-plan.md
infra/: README.md  docker-compose.yml
infra/livekit/: livekit.yaml
infra/postgres/: init-databases.sh
scripts/: dev.sh  kill.sh  replay.py  seed_dev_session.py  seed_problems.py  smoke_brain.py  warm_models.py
tests/: README.md
