[project]
name = "archmentor-agent"
version = "0.0.0"
description = "ArchMentor LiveKit agent worker"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "anthropic==0.96.0",
    "livekit-agents==1.5.4",
    "livekit-plugins-silero==1.5.4",
    "pydantic==2.13.2",
    "redis==7.4.0",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "numpy==2.4.4",
]

[project.optional-dependencies]
# Apple Silicon audio stack. Kept optional so CI (Linux runners) can
# install the agent without building Metal/MPS-dependent wheels.
# Lazy-imported in `audio/stt.py` and `tts/kokoro.py`; the agent
# entrypoint reports a clear error if the extras are missing.
audio = [
    "pywhispercpp==1.4.1",
    "streaming-tts==0.3.8",
    # audioop-lts backports the audioop stdlib module removed in Python
    # 3.13 — pydub (pulled in by streaming-tts) still imports it.
    "audioop-lts==0.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.11",
    "ty==0.0.31",
]

[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "archmentor_agent"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ty.src]
root = "./archmentor_agent"
