[project]
name = "archmentor-api"
version = "0.0.0"
description = "ArchMentor control-plane API (FastAPI)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "sqlmodel==0.0.38",
    "alembic==1.18.4",
    "psycopg[binary]==3.3.3",
    "redis==7.4.0",
    "httpx==0.28.1",
    "pyjwt[crypto]==2.12.1",
    "python-multipart==0.0.26",
    "structlog==25.5.0",
    "livekit-api==1.1.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.15.11",
    "ty==0.0.31",
]

[build-system]
requires = ["uv_build>=0.5.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "archmentor_api"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ty.src]
root = "./archmentor_api"
